--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /*======================= FONTS =======================*/
+
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
 @font-face {
@@ -22,6 +23,7 @@
 }
 
 /*======================= BASE =======================*/
+
 * {
 	padding: 0;
 	margin: 0;
@@ -65,6 +67,7 @@ p strong {
 }
 
 /*======================= REUSABLE CSS CLASSES =======================*/
+
 .section {
 	height: auto;
 }
@@ -107,6 +110,7 @@ p strong {
 }
 
 /*======================= NAV =======================*/
+
 .nav {
 	position: relative;
 	z-index: 4;
@@ -271,4 +275,75 @@ p strong {
 	display: block;
 	height: 67px;
 	padding-bottom: 8px;
+}
+
+/*======================= MOBILE NAV =======================*/
+
+.nav__mobile {
+	display: none;
+}
+
+.nav__mobile:hover {
+	cursor: pointer;
+}
+
+.nav__mobile-hamburger .nav__mobile-hamburger-bar {
+	width: 19px;
+	height: 3px;
+	background: #191e1e;
+	margin: 0 0 3px;
+	transition: background 0.3s;
+}
+
+/*==================== MEDIA QUERIES ====================*/
+/* For small devices */
+@media screen and (max-width: 800px) {
+	header {
+		height: 47px;
+	}
+
+	.nav {
+		position: fixed;
+		width: 100%;
+		border-bottom: 1px solid #ebf2f2;
+	}
+
+	.nav__mobile {
+		display: block;
+		position: fixed;
+		right: 15px;
+		top: 8px;
+		z-index: 11;
+	}
+
+	.nav__items {
+		display: none;
+	}
+
+	.nav__logo {
+		height: 35px;
+	}
+
+	.nav__mobile-hamburger {
+		padding: 10px;
+	}
+
+	.nav__mobile-hamburger:hover .nav__mobile-hamburger-bar {
+		background: #6db33f;
+	}
+}
+
+/* For medium devices */
+@media screen and (min-width: 800px) and (max-width: 1000px) {
+	nav {
+		padding-right: 20px;
+	}
+
+	.nav__logo {
+		height: 30px;
+	}
+}
+
+/* For large devices */
+@media screen and (min-width: 1000px) {
 }
