--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,6 @@ a {
 	color: #000;
 }
 
-img {
-	max-width: 100%;
-	height: auto;
-}
-
 h1,
 h2,
 h3,
@@ -295,6 +290,90 @@ p strong {
 	transition: background 0.3s;
 }
 
+/*======================= MAIN =======================*/
+.promo {
+	padding-top: 80px;
+}
+
+.promo__header {
+	font-size: 3.75rem;
+	line-height: 1em;
+	margin-top: 0.4em;
+	margin-bottom: 10px;
+}
+
+.promo__text {
+	font-size: 1.5rem;
+	margin-top: 1em;
+	line-height: 1.7em;
+	max-width: 1040px;
+	margin-bottom: 80px;
+}
+
+/*======================= PROJECTS =======================*/
+.content {
+	background-color: #ebf2f2;
+	padding: 50px 0;
+}
+
+.projects__section {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 60px;
+}
+
+.projects__wrapper {
+	width: 82.5%;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.projects__item {
+	display: flex;
+	justify-content: space-between;
+	background: #fff;
+	padding: 40px 30px;
+	margin-bottom: 25px;
+	width: 48.5%;
+	border-radius: 5px;
+	transition: all 0.2s, transform 0.2s;
+	transform: translateY(0);
+	position: relative;
+	box-shadow: none;
+	top: 0;
+	box-sizing: border-box;
+}
+
+.projects__item:hover {
+	transform: translateY(-3px);
+	top: -3px;
+	box-shadow: 0 10px 20px 0 rgba(108, 135, 135, 0.2);
+}
+
+.project__icon {
+	width: 18.5%;
+	align-self: flex-start;
+}
+
+.project__icon-img {
+	height: 60px;
+}
+
+.project__text {
+	width: 73%;
+}
+
+.project__text h3 {
+	font-size: 1.5rem;
+	align-self: flex-start;
+}
+
+.project__text p {
+	margin: 16px 0;
+	line-height: 1.7em;
+}
+
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
 @media screen and (max-width: 800px) {
@@ -331,6 +410,26 @@ p strong {
 	.nav__mobile-hamburger:hover .nav__mobile-hamburger-bar {
 		background: #6db33f;
 	}
+
+	.promo__header {
+		font-size: 2rem;
+		line-height: 0.75em;
+	}
+
+	.promo__text {
+		font-size: 1rem;
+		line-height: 1.7em;
+	}
+
+	.projects__item {
+		width: 100%;
+	}
+
+	.project__icon img {
+		height: auto;
+		max-height: 60px;
+		max-width: 70px;
+	}
 }
 
 /* For medium devices */
@@ -342,8 +441,42 @@ p strong {
 	.nav__logo {
 		height: 30px;
 	}
+
+	.nav__items {
+		width: 550px;
+		font-size: 0.85rem;
+	}
+
+	.promo__header {
+		font-size: 2.5rem;
+		line-height: 1.2em;
+	}
+
+	.promo__text {
+		font-size: 1.25rem;
+		line-height: 2rem;
+	}
+
+	.project__icon img {
+		height: auto;
+		max-height: 50px;
+		max-width: 60px;
+	}
+}
+
+@media (max-width: 1000px) {
+	.projects__wrapper {
+		width: 100%;
+	}
+
+	.projects__section {
+		flex-direction: column;
+	}
 }
 
 /* For large devices */
 @media screen and (min-width: 1000px) {
+	.projects__wrapper {
+		width: 80%;
+	}
 }
