fixed icons and fonts paths

--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
 /*======================= FONTS =======================*/
 
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
+@import url("https:/./fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
 @font-face {
 	font-family: Metropolis;
-	src: url(/fonts/Metropolis-Regular.woff2) format("woff2"), url(/fonts/Metropolis-Regular.woff) format("woff");
+	src: url(./fonts/Metropolis-Regular.woff2) format("woff2"), url(./fonts/Metropolis-Regular.woff) format("woff");
 	font-style: normal;
 	font-weight: 400;
 }
 @font-face {
 	font-family: Metropolis;
-	src: url(/fonts/Metropolis-Bold.woff2) format("woff2"), url(/fonts/Metropolis-Bold.woff) format("woff");
+	src: url(./fonts/Metropolis-Bold.woff2) format("woff2"), url(./fonts/Metropolis-Bold.woff) format("woff");
 	font-weight: 500;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: Metropolis;
-	src: url(/fonts/Metropolis-ExtraBold.woff2) format("woff2"), url(/fonts/Metropolis-ExtraBold.woff) format("woff");
+	src: url(./fonts/Metropolis-ExtraBold.woff2) format("woff2"), url(./fonts/Metropolis-ExtraBold.woff) format("woff");
 	font-weight: 600;
 	font-style: normal;
 }
